tests/models/struct/unnamed/f32/fail/min_length.rs
use dade::model;
#[model]
struct TestModel (
   #[field(min_length = 2)]
    f32
);
fn main() {}
